force-app/main/default/objects/Required_Role__c/Required_Role__c.object-meta.xml
<CustomObject>
    <label>Required Role</label>
    <nameField>
        <label>Required Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Required Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>