force-app/main/default/objects/Required_Role__c/fields/Total_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Total_Coverage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Coverage</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>