force-app/main/default/objects/Required_Role__c/fields/TotalCoverage__c.field-meta.xml
<CustomField>
    <fullName>TotalCoverage__c</fullName>
    <description>RollUp</description>
    <label>TotalCoverage</label>
    <summarizedField>Resource_Allocation__c.Total_Hours__c</summarizedField>
    <summaryForeignKey>Resource_Allocation__c.Required_Role__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>